# Sound-Trimmer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
